SFDCProject/src/objects/Resource__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags_KeyWord__c</fullName>
        <label>Tags_KeyWord</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talking_Points_and_Templates__c</fullName>
        <label>Body 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Resource</label>
    <pluralLabel>Resources</pluralLabel>
</CustomObject>